# freeport

./: .gitignore  CONTRIBUTING.md  FORKING.md  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  desktop.yml  docker-publish.yml  pages.yml  self-hosted-image.yml
apps/desktop/: build-web.sh  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .gitignore  App.tsx  CONTRIBUTING.md  README.md  TESTING.md  app.json  deploy-ota.sh  deploy-web.sh  eas.json  google-services.json  metro.config.js  package-lock.json  package.json  react-native.config.js  vitest.config.ts
apps/mobile/dist-fresh/: index.html
apps/mobile/pwa/: manifest.webmanifest  sw.js
apps/mobile/scripts/: build-offline.mjs  copy-breez-wasm.mjs  gen-celebrate.mjs  gen-sounds.mjs  hash-bundles.mjs  pin-ipfs.mjs  subset-fonts.mjs
apps/mobile/src/: Fireworks.tsx  Map.tsx  Map.web.tsx  TimeSpinner.tsx  TimeSpinner.web.tsx  addressbook.ts  audioShim.ts  backgroundTask.ts  backup.ts  backup.web.ts  browseFilter.ts  categories.ts  client.ts  cloudBackup.ts  cloudBackup.web.ts  cloudSync.ts  conversations.ts  deals.ts  debug.ts  debug.web.ts  desktopHost.ts  desktopNative.ts  emergency.ts  foregroundService.ts  foregroundService.web.ts  geo.ts  geo.web.ts  groups.ts  haptics.ts  haptics.web.ts  i18n.ts  identity.ts  karma.ts  kv.ts  kv.web.ts  kvCache.ts  kvCache.web.ts  language.ts  livetrip.ts  localityRef.ts  (+49 more)
apps/mobile/store/: SUBMISSION.md  aup.html  delete-account.html  ios_distribution.cer  llms.txt  privacy.html  release-notes-1.7.0.txt
apps/mobile/test/: ai-gating.test.ts  backup-encrypt.test.ts  calls.test.ts  (+71 more)
apps/worker-notify/: README.md  watcher.mjs  wrangler.toml
demo/: driver.config.json  ride-request.json  rider.config.json  run-demo.sh
docs/: ROADMAP.md  TODO.md  index.html  miniapps-security.md  protocol.md  whitepaper.md  whitepaper.tex  whitepaper.vi.tex
examples/arbitrator/: README.md  freeport.json  index.html
examples/demo-app/: README.md  index.html
examples/esim-store/: README.md  freeport.json  index.html
examples/id-verification/: README.md  freeport.json  index.html
examples/insurance-store/: README.md  freeport.json  index.html
infra/lnurlp-proxy/: worker.js  wrangler.toml
infra/turn-credentials/: worker.js  wrangler.toml
relay/: README.md  docker-compose.yml  strfry.conf  write-policy.md
scripts/: check-breez-versions.mjs
server/: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
(+213 files in other folders)
