[package]
name = "freeport-desktop"
version = "1.4.1"
description = "Freeport — decentralized P2P marketplace on Nostr"
authors = ["Freeport"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "freeport_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
# Open external links (share links, tel:, mailto:) in the system browser/app —
# the WebView drops window.open() to external origins.
tauri-plugin-opener = "2"
# Self-update from GitHub Releases (latest.json, minisign-verified) + relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native save dialog + file write for account export (the WebView's silent
# download-to-Downloads gives no feedback).
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Built-in "host Freeport on your LAN" server: a tiny, dependency-light static
# file server serving the embedded web bundle.
tiny_http = "0.12"
local-ip-address = "0.6"
# Reverse-proxy notifier API routes to the bundled notification-server sidecar
# when the user opts to host notifications on the same port.
ureq = "2"

[features]
# by default Tauri runs in production mode when `tauri dev` is not used
custom-protocol = ["tauri/custom-protocol"]

# Smaller, stripped release binary (size-optimized; this app is I/O-bound so the
# codegen trade-off is invisible at runtime).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
